2025-12-25T01:15:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20496701899 # 1386
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-25
* notice: last 14d: unq all: 53 77
* notice: prev accum: outdated-unq outdated-all / unq all: 5146 10180 / 5199 10248
* notice: next accum: outdated-unq outdated-all / unq all: 5146 10180 / 5207 10258
* notice: prev exec diff / last date diff / accum: unq all: +8 +10 -1 -1 / +9 +11 -0 -0 / 9 11
* notice: removed / changed dates: [] / [2025-12-11 2025-12-24]

2025-12-24T12:33:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20486282143 # 1385
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-24
* notice: last 14d: unq all: 48 68
* notice: prev accum: outdated-unq outdated-all / unq all: 5144 10178 / 5198 10247
* notice: next accum: outdated-unq outdated-all / unq all: 5146 10180 / 5199 10248
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-12-10] / [2025-12-24]

2025-12-24T01:15:18Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20475459378 # 1384
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-24
* notice: last 14d: unq all: 49 69
* notice: prev accum: outdated-unq outdated-all / unq all: 5139 10169 / 5198 10247
* notice: next accum: outdated-unq outdated-all / unq all: 5144 10178 / 5198 10247
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-09] / []

2025-12-23T01:16:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20448460222 # 1382