@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-25T01:15:58Z",
-  "count_outdated" : 10180,
-  "uniques_outdated" : 5146,
+  "timestamp" : "2025-12-25T12:32:35Z",
+  "count_outdated" : 10183,
+  "uniques_outdated" : 5148,
   "count" : 10258,
   "uniques" : 5207,
   "clones" : [
-    {
-      "timestamp": "2025-12-11T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 3 ],
-      "count_decinc": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2025-12-12T00:00:00Z",
       "count": 1,
