@@ -1,3 +1,12 @@
+2025-12-25T12:32:35Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20505131625 # 1387
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-25
+* notice: last 14d: unq all: 52 75
+* notice: prev accum: outdated-unq outdated-all / unq all: 5146 10180 / 5207 10258
+* notice: next accum: outdated-unq outdated-all / unq all: 5148 10183 / 5207 10258
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-12-11] / []
+
 2025-12-25T01:15:58Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20496701899 # 1386
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-25
